force-app/main/default/objects/Extended_Data__c.object
<CustomObject>
    <fields>
        <fullName>A3_Academy_Selection__c</fullName>
        <description>The academy the student is interested in</description>
        <label>A3 Academy Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Career Academy</fullName>
                </value>
                <value>
                    <fullName>Digital Academy</fullName>
                </value>
                <value>
                    <fullName>Global Language Academy</fullName>
                </value>
                <value>
                    <fullName>Prep</fullName>
                </value>
                <value>
                    <fullName>Valiant Prep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A3_Cali_Service_Area__c</fullName>
        <description>Student&apos;s Assigned Service Area</description>
        <label>A3 Cali Service Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Northern Scope</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
                <value>
                    <fullName>Santa Barbara</fullName>
                </value>
                <value>
                    <fullName>Sonoma</fullName>
                </value>
                <value>
                    <fullName>Sutter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>A3_Career_Academy_Tracks__c</fullName>
        <description>Which career tracks is the student interested in?</description>
        <label>A3 Career Academy Tracks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurial Studies</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_MVPS_County__c</fullName>
        <description>MVPS County Listing</description>
        <label>CL MVPS County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adams County</fullName>
                </value>
                <value>
                    <fullName>Alcorn County</fullName>
                </value>
                <value>
                    <fullName>Amite County</fullName>
                </value>
                <value>
                    <fullName>Attala County</fullName>
                </value>
                <value>
                    <fullName>Benton County</fullName>
                </value>
                <value>
                    <fullName>Bolivar County</fullName>
                </value>
                <value>
                    <fullName>Calhoun County</fullName>
                </value>
                <value>
                    <fullName>Carroll County</fullName>
                </value>
                <value>
                    <fullName>Chickasaw County</fullName>
                </value>
                <value>
                    <fullName>Choctaw County</fullName>
                </value>
                <value>
                    <fullName>Claiborne County</fullName>
                </value>
                <value>
                    <fullName>Clarke County</fullName>
                </value>
                <value>
                    <fullName>Clay County</fullName>
                </value>
                <value>
                    <fullName>Coahoma County</fullName>
                </value>
                <value>
                    <fullName>Copiah County</fullName>
                </value>
                <value>
                    <fullName>Covington County</fullName>
                </value>
                <value>
                    <fullName>DeSoto County</fullName>
                </value>
                <value>
                    <fullName>Forrest County</fullName>
                </value>
                <value>
                    <fullName>Franklin County</fullName>
                </value>
                <value>
                    <fullName>George County</fullName>
                </value>
                <value>
                    <fullName>Greene County</fullName>
                </value>
                <value>
                    <fullName>Grenada County</fullName>
                </value>
                <value>
                    <fullName>Hancock County</fullName>
                </value>
                <value>
                    <fullName>Harrison County</fullName>
                </value>
                <value>
                    <fullName>Hinds County</fullName>
                </value>
                <value>
                    <fullName>Holmes County</fullName>
                </value>
                <value>
                    <fullName>Humphreys County</fullName>
                </value>
                <value>
                    <fullName>Issaquena County</fullName>
                </value>
                <value>
                    <fullName>Itawamba County</fullName>
                </value>
                <value>
                    <fullName>Jackson County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_Mo_VIP_Zoned_School__c</fullName>
        <description>MoVIP-Zoned School</description>
        <label>CL Mo VIP Zoned School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MoVIP-ADAIR CO. HIGH</fullName>
                </value>
                <value>
                    <fullName>MoVIP-ADAMS ELEM.</fullName>
                </value>
                <value>
                    <fullName>MoVIP-ASH GROVE R-IV</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BABLER ELEM.</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BAKERSFIELD R-IV</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BALLARD ELEM.</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BALLARD HIGH</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BARNWELL MIDDLE</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BELTON 124</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BELTON HIGH</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BELTON HIGH- FRESHMAN CTR.</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BERNARD C. CAMPBELL MIDDLE</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BOIS DARC ELEM.</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BOLIVAR R-I</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BORDER STAR MONTESSORI</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BRANSON HIGH</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BRANSON R-IV</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BRONAUGH ELEM.</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BRONAUGH HIGH</fullName>
                </value>
                <value>
                    <fullName>MoVIP-BUCHANAN CO. R-IV</fullName>
                </value>
                <value>
                    <fullName>MoVIP-Camdenton R-III</fullName>
                </value>
                <value>
                    <fullName>MoVIP-CANTON HIGH</fullName>
                </value>
                <value>
                    <fullName>MoVIP-CARL JUNCTION PRIMARY 2-3</fullName>
                </value>
                <value>
                    <fullName>MoVIP-CARL JUNCTION R-I</fullName>
                </value>
                <value>
                    <fullName>MoVIP-CARNAHAN SCH. OF THE FUTURE</fullName>
                </value>
                <value>
                    <fullName>MoVIP-CLAYTON HIGH</fullName>
                </value>
                <value>
                    <fullName>MoVIP-COLUMBIA 93</fullName>
                </value>
                <value>
                    <fullName>MoVIP-CONWAY ELEM.</fullName>
                </value>
                <value>
                    <fullName>MoVIP-CONWAY HIGH</fullName>
                </value>
                <value>
                    <fullName>MoVIP-CRESTVIEW MIDDLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_Statement_Integrity_LA_Test__c</fullName>
        <description>Statement of Academic Integrity (Language Arts)</description>
        <label>CL Statement Integrity LA Test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I confirm that the student completed the Language Arts Assessment independently, that answers are his/her own, and that he/she did not receive any assistance when responding.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_Statement_Integrity_Math_Test__c</fullName>
        <description>Statement of Academic Integrity (Math)</description>
        <label>CL Statement Integrity Math Test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I confirm that the student completed the Math Assessment independently, that answers are his/her own, and that he/she did not receive any assistance when responding.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_TxVSN_Zoned_School__c</fullName>
        <description>TxVSN-Zoned School</description>
        <label>CL TxVSN Zoned School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TxVSN-ABILENE H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ACADEMY H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ACADEMY OF CHOICE</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ALAMO HEIGHTS H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ALDINE H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ALEDO H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ALIEF ISD</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ALVARADO H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ALVORD H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-AMARILLO H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ANAHUAC H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ARLINGTON CLASSICS ACADEMY - MIDDLE</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ARLINGTON H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ARTIE L HENRY MIDDLE</fullName>
                </value>
                <value>
                    <fullName>TxVSN-ASPERMONT H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-AUBREY H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-AUDIE MURPHY MIDDLE</fullName>
                </value>
                <value>
                    <fullName>TxVSN-Austin H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-AVINGER SCHOOL</fullName>
                </value>
                <value>
                    <fullName>TxVSN-AZLE H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BANQUETE H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BARTLETT SCHOOLS</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BAY CITY H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BEL AIR HS</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BELLEVUE SCHOOL</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BELTON H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BEN BOLT-PAL BLANCO H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BISHOP H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BLOOMBURG H S</fullName>
                </value>
                <value>
                    <fullName>TxVSN-BLUFF DALE EL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_User_Program_Region__c</fullName>
        <description>Program Region</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CL User Program Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CL_VHS_Zoned_School__c</fullName>
        <description>VHS-Zoned School</description>
        <label>CL VHS Zoned School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VHS-Archbishop Williams High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Ashland High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Auburn High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Avon High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Ballard High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Bellows Free Academy Saint Albans</fullName>
                </value>
                <value>
                    <fullName>VHS-Bergen Catholic HS</fullName>
                </value>
                <value>
                    <fullName>VHS-Berks Catholic High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Big Walnut High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Blacklick Valley JSHS</fullName>
                </value>
                <value>
                    <fullName>VHS-Camden County</fullName>
                </value>
                <value>
                    <fullName>VHS-Canton High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Carver High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Cary Academy</fullName>
                </value>
                <value>
                    <fullName>VHS-Catholic Memorial</fullName>
                </value>
                <value>
                    <fullName>VHS-Central Wisconsin Christian</fullName>
                </value>
                <value>
                    <fullName>VHS-Classical Christian Academy</fullName>
                </value>
                <value>
                    <fullName>VHS-Coventry High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Cromwell High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Croton-Harmon HS</fullName>
                </value>
                <value>
                    <fullName>VHS-David Prouty High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Dunn School</fullName>
                </value>
                <value>
                    <fullName>VHS-Eastconn/ ACT Magnet High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Fishers Island School</fullName>
                </value>
                <value>
                    <fullName>VHS-Four Rivers Charter Public School</fullName>
                </value>
                <value>
                    <fullName>VHS-Foxcroft Academy</fullName>
                </value>
                <value>
                    <fullName>VHS-Gateway Regional High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Glen Ridge High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Granby Jr Sr High School</fullName>
                </value>
                <value>
                    <fullName>VHS-Greater New Bedford Voc-Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_Virtual_School_Zoned_School__c</fullName>
        <description>Virtual School-Zoned School</description>
        <label>CL Virtual School Zoned School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AACPS-Crofton Middle School</fullName>
                </value>
                <value>
                    <fullName>AACPS-North County High School</fullName>
                </value>
                <value>
                    <fullName>AACPS-Severn River Middle School</fullName>
                </value>
                <value>
                    <fullName>AACPS-Severna Park High School</fullName>
                </value>
                <value>
                    <fullName>AACPS-South River High School</fullName>
                </value>
                <value>
                    <fullName>ALAW-Algoma</fullName>
                </value>
                <value>
                    <fullName>ALAW-Alma Center</fullName>
                </value>
                <value>
                    <fullName>ALAW-Baraboo</fullName>
                </value>
                <value>
                    <fullName>ALAW-Barron Area School District</fullName>
                </value>
                <value>
                    <fullName>ALAW-Beloit</fullName>
                </value>
                <value>
                    <fullName>ALAW-Butternut</fullName>
                </value>
                <value>
                    <fullName>ALAW-De Soto</fullName>
                </value>
                <value>
                    <fullName>ALAW-Hortonville</fullName>
                </value>
                <value>
                    <fullName>ALAW-Ladysmith</fullName>
                </value>
                <value>
                    <fullName>ALAW-Lodi</fullName>
                </value>
                <value>
                    <fullName>ALAW-Manitowoc</fullName>
                </value>
                <value>
                    <fullName>ALAW-Milwaukee</fullName>
                </value>
                <value>
                    <fullName>ALAW-Paris Elementary School</fullName>
                </value>
                <value>
                    <fullName>ALAW-Racine</fullName>
                </value>
                <value>
                    <fullName>ALAW-Rice Lake</fullName>
                </value>
                <value>
                    <fullName>ALAW-Solon Springs</fullName>
                </value>
                <value>
                    <fullName>ALAW-Waupaca</fullName>
                </value>
                <value>
                    <fullName>ALAW-Wisconsin Dells</fullName>
                </value>
                <value>
                    <fullName>Alpine Online-Alpine</fullName>
                </value>
                <value>
                    <fullName>Alpine Online-Canyons</fullName>
                </value>
                <value>
                    <fullName>Alpine Online-Nebo</fullName>
                </value>
                <value>
                    <fullName>Alpine Online-Salt Lake</fullName>
                </value>
                <value>
                    <fullName>Alpine Online-San Juan</fullName>
                </value>
                <value>
                    <fullName>Alpine Online-Toole</fullName>
                </value>
                <value>
                    <fullName>AMIkids-Dickenson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ever_Enrolled_FL_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student ever been enrolled in a Florida Public School</description>
        <label>Ever Enrolled FL Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_In_NM_Public_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the student ever attend a public school in the state of New Mexico?</description>
        <label>Ever In NM Public School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_in_California_Public_School__c</fullName>
        <description>Has the student ever been enrolled in a California public school</description>
        <label>Ever in California Public School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ever_in_NC_Public_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student ever been enrolled in a North Carolina public school</description>
        <label>Ever in NC Public School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_in_OH_Public_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student ever been enrolled in an Ohio public school?</description>
        <label>Ever in OH Public School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ever_in_Public_School_Indiana__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the student ever attended an Indiana public school?</description>
        <label>Ever in Public School Indiana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLVS_After_HS_Plans_Free_Response__c</fullName>
        <description>The student’s intended major or area of interest</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FLVS After HS Plans Free Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FL_StudentStatus__c</fullName>
        <description>The statement t that most accurately reflects the student’s status in regards to preferential treatment in the event of a lottery for enrollment</description>
        <label>FL StudentStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My child is a resident of the Hillsborough School District.</fullName>
                </value>
                <value>
                    <fullName>My child is enrolling in the school because of a relocation due to a foster care placement in a different school zone.</fullName>
                </value>
                <value>
                    <fullName>My student attended or was assigned to a failing school pursuant to s. 1002.38.</fullName>
                </value>
                <value>
                    <fullName>My student is a dependent child of active duty military personnel of any branch of the United States Armed Forces (includes students that moved to Florida as a result of military orders).</fullName>
                </value>
                <value>
                    <fullName>My student is applying because of a move due to a court ordered change in custody relating to separation or divorce, or the serious illness or death of a custodial parent.</fullName>
                </value>
                <value>
                    <fullName>My student is the child of a member of the governing board of Florida Connections Academy.</fullName>
                </value>
                <value>
                    <fullName>My student is the child of an employee of Florida Connections Academy.</fullName>
                </value>
                <value>
                    <fullName>None of these situations apply to my student.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GA_Milestones_Summer_Retest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the student scheduled to take the Georgia Milestones summer retest?</description>
        <label>GA Milestones Summer Retest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grade Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HISD_Privacy_Code_Status__c</fullName>
        <description>HISD Privacy Code</description>
        <label>HISD Privacy Code Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HISD_Student_Residency_Status__c</fullName>
        <description>Student Residency Questionnaire Status</description>
        <label>HISD Student Residency Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardship_Grade_Enrolling_UCA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Family has at least one student enrolling in grades K-6 at Utah Connections Academy</description>
        <label>Hardship Grade Enrolling UCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Income__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Household Income</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_Approved_by_CAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approved by CAM</description>
        <label>IA Approved by CAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_Date_Sent_to_CAM__c</fullName>
        <description>Date sent to CAM</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IA Date Sent to CAM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IA_Denied_by_Resident_District__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denied by Resident District</description>
        <label>IA Denied by Resident District</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_Enrollment_Application_Status__c</fullName>
        <description>Enrollment Application Status</description>
        <label>IA Enrollment Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Received late</fullName>
                </value>
                <value>
                    <fullName>Received on time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IA_OEA_Received_From_CAM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OEA received from CAM 1819</description>
        <label>IA OEA Received From CAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_OEA_Regular_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Regular Education</description>
        <label>IA OEA Regular Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_OEA_Special_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Special Education</description>
        <label>IA OEA Special Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IA_Sent_to_Resident_District__c</fullName>
        <description>Date Sent to Resident District</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IA Sent to Resident District</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INCACareerAreaInterest__c</fullName>
        <description>the student&apos;s career area of interest</description>
        <label>INCACareerAreaInterest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts - Communications</fullName>
                </value>
                <value>
                    <fullName>Business - Marketing</fullName>
                </value>
                <value>
                    <fullName>Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Science Technology - Engineering - Math</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INCCCareerPathways__c</fullName>
        <description>Indiana Connections Career Academy offers coursework and educational activities in five career areas. Which career area is the student interested in</description>
        <label>INCCCareerPathways</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts, A/V, and Communication</fullName>
                </value>
                <value>
                    <fullName>Health Science</fullName>
                </value>
                <value>
                    <fullName>Hospitality and Human Services</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Undecided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IN_Career_Academy_Interest__c</fullName>
        <description>Are you interested in learning more about the career focused learning opportunities at Indiana Connections Career Academy</description>
        <label>IN Career Academy Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I am interested in speaking to a counselor about the opportunity to enroll my student in Indiana Connections Career Academy</fullName>
                </value>
                <value>
                    <fullName>I am not interested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>